fix: Fix toolbar color

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -27,4 +27,8 @@
         <item name="android:textColorHint">@color/textOnPrimaryMediumEmphasis</item>
     </style>
 
+    <style name="Widget.MaterialComponents.Toolbar.MainToolbar">
+        <item name="titleTextColor">@color/textOnPrimaryHighEmphasis</item>
+    </style>
+
 </resources>
