feat: Add send request button

--- a/app/src/main/res/layout/fragment_create_route_request.xml
+++ b/app/src/main/res/layout/fragment_create_route_request.xml
@@ -7,6 +7,8 @@
     tools:context=".ui.create_request.CreateRouteRequestFragment">
 
     <include
-        layout="@layout/view_create_request_header" />
+        android:id="@+id/include"
+        layout="@layout/view_create_request_overlay" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
