--- a/app/src/main/res/layout/view_create_request_overlay.xml
+++ b/app/src/main/res/layout/view_create_request_overlay.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -80,5 +81,23 @@
         app:barrierDirection="bottom"
         app:constraint_referenced_ids="tilStartPoint,tilEndPoint"
         app:layout_constraintTop_toBottomOf="@id/tilEndPoint" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btSendRequest"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:cornerRadius="8dp"
+        android:textColor="@color/textOnPrimaryHighEmphasis"
+        android:text="Send Request"
+        app:icon="@drawable/ic_round_navigation_24px"
+        app:iconPadding="4dp"
+        android:visibility="gone"
+        tools:visibility="visible"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
