feat: Improve request creation experience

--- a/app/src/main/res/layout/view_create_request_overlay.xml
+++ b/app/src/main/res/layout/view_create_request_overlay.xml
@@ -19,12 +19,12 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/tilStartPoint"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.TILOnPrimary"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.TILOnPrimary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="119dp"
+        android:layout_marginEnd="16dp"
         android:hint="Starting Point"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,14 +35,15 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:textColor="@color/textOnPrimaryHighEmphasis"
-            android:textCursorDrawable="@null" />
+            android:textCursorDrawable="@null"
+            android:enabled="false"/>
 
     </com.google.android.material.textfield.TextInputLayout>
 
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/tilEndPoint"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.TILOnPrimary"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.TILOnPrimary"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -60,9 +61,24 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:textColor="@color/textOnPrimaryHighEmphasis"
-            android:textCursorDrawable="@null" />
+            android:textCursorDrawable="@null"
+            android:enabled="false"/>
 
     </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btClearMap"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:paddingBottom="8dp"
+        android:text="Clear Map"
+        android:textColor="@color/textOnPrimaryHighEmphasis"
+        app:layout_constraintBottom_toTopOf="@id/editTextBarrier"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tilEndPoint"
+        android:visibility="gone"/>
 
     <androidx.constraintlayout.widget.Barrier
         android:id="@+id/editTextBarrier"
@@ -70,7 +86,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         app:barrierDirection="bottom"
-        app:constraint_referenced_ids="tilStartPoint,tilEndPoint"
+        app:constraint_referenced_ids="tilStartPoint,tilEndPoint,materialButton"
         app:layout_constraintTop_toBottomOf="@id/tilEndPoint" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
